--- a/src/components/AppointmentDetails.css
+++ b/src/components/AppointmentDetails.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #bbdefb;
   border-bottom: 2px solid #1976d2;
 }
 
@@ -19,7 +18,7 @@
 
 /* Content */
 .details-dialog-content {
-  background-color: #fffde7; /* light yellow background */
+  background-color:white; /* light yellow background */
 }
 
 .details-section {
@@ -62,12 +61,4 @@
   background-color: #ffcdd2 !important;
 }
 
-.details-close-action-btn {
-  background-color: #f1f8e9 !important;
-  color: #388e3c !important;
-  font-weight: 600 !important;
-}
 
-.details-close-action-btn:hover {
-  background-color: #c8e6c9 !important;
-}
